# pytest-conductor

./: README.md  pyproject.toml
.github/workflows/: pr.yml  release.yml
example/: README.md  pyproject.toml
example/src/calculator/: __init__.py
example/src/tests/: conftest.py  test_advanced_operations.py  test_basic_operations.py  test_data_processing.py  test_no_tags.py
example/src/tests/advanced/: conftest.py  test_advanced_features.py
src/integration_tests/: __init__.py  demo.py  test_pytest_conductor_integration.py  test_timing_demo.py
src/pytest_conductor/: __init__.py  core.py
src/tests/: test_edge_cases.py  test_fixture_validation.py  test_plugin.py
src/unit_tests/: test_conftest_fixture_conflicts.py  test_edge_case_examples.py  test_fixture_validation.py  test_plugin.py  test_unmatched_none.py
